# nanoGPT

./: .dockerignore  .gitignore  README_BENCHMARK.md  README_addendum_mha_gqa_mqa.md  batch_infer.py  bench_gqa_sweep.py  collect_eval_results.py  configurator.py  eval_loss.py  gqa_mqa_mha_systems_analysis.md  model.py  prompt.txt  pyproject.toml  requirements.lock.txt  run_sweep.py  swa_decode_bench.py  swa_sanity.py  train.py
bench/: batch_infer.py  bench.py  configurator.py  eval_loss.py  inspect_ckpt.py  plot_eval_compare.py  plot_sweep.py  run_eval_compare.py  run_sweep.py  sample.py  swa_decode_bench.py  swa_sanity.py  sweep_n_kv_head.py  train.py
bench_out/: infer_T2048_B8_KVfalse_Pdecode.json  infer_T2048_B8_KVtrue_Pdecode.json  infer_h12_kv12_T1024_B16_KVtrue_Pdecode.json  infer_h12_kv12_T1024_B16_KVtrue_Pdecode_norope.json  infer_h12_kv12_T1024_B16_KVtrue_Pdecode_rmsnorm_norope.json  infer_h12_kv12_T1024_B16_KVtrue_Pdecode_rmsnorm_rope.json  infer_h12_kv12_T1024_B1_KVtrue_Pdecode.json  infer_h12_kv12_T1024_B1_KVtrue_Pdecode_norope.json  infer_h12_kv12_T1024_B1_KVtrue_Pdecode_rmsnorm_norope.json  infer_h12_kv12_T1024_B1_KVtrue_Pdecode_rmsnorm_rope.json  infer_h12_kv12_T1024_B32_KVtrue_Pdecode.json  infer_h12_kv12_T1024_B32_KVtrue_Pdecode_norope.json  infer_h12_kv12_T1024_B32_KVtrue_Pdecode_rmsnorm_norope.json  infer_h12_kv12_T1024_B32_KVtrue_Pdecode_rmsnorm_rope.json  infer_h12_kv12_T1024_B4_KVtrue_Pdecode.json  infer_h12_kv12_T1024_B4_KVtrue_Pdecode_norope.json  infer_h12_kv12_T1024_B4_KVtrue_Pdecode_rmsnorm_norope.json  (+374 more)
docker/: Dockerfile
(+227 files in other folders)
