[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nanogpt"
version = "0.1.0"
description = "nanoGPT experiments with KV cache, GQA/MQA, and sliding window attention"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }

dependencies = [
    "typing-extensions",
    "numpy",
    "tqdm",
    "transformers",
    "datasets",
    "sentencepiece",
    "requests",
    "tiktoken",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "ipykernel",
]

bench = [
    "matplotlib",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
